--- a/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-list/instrument-list.component.html
+++ b/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-list/instrument-list.component.html
@@ -16,7 +16,7 @@
                  (ngModelChange)="enableAllItems()">
         </div>
       </th>
-      <th scope="col" class="col-1">Tên</th>
+      <th scope="col" class="col-3">Tên</th>
       <th scope="col" class="col-1">Số hiệu</th>
       <th scope="col" class="col-1">Ký hiệu</th>
       <th scope="col" class="col-1">Nhóm</th>
@@ -39,17 +39,15 @@
                  (ngModelChange)="enableItem(ins.id)">
         </div>
       </th>
-      <td class="col-1 d-flex align-items-center justify-content-center">
+      <td class="col-3 d-flex align-items-center justify-content-start">
         <a [routerLink]="[ins.id]" class="link-info">{{ins.instrumentName}}</a></td>
       <td class="col-1 d-flex align-items-center justify-content-center">{{ins.instrumentSerialNumber}}</td>
       <td class="col-1 d-flex align-items-center justify-content-center">{{ins.instrumentSymbol}}</td>
-      <td
-        class="col-1 d-flex align-items-center justify-content-center">{{ins.instrumentGroup?.instrumentGroupName}}</td>
+      <td class="col-1 d-flex align-items-center justify-content-center">{{ins.instrumentGroup?.instrumentGroupName}}</td>
       <td class="col-1 d-flex align-items-center justify-content-center">{{ins.inServiceDate | date: "dd/MM/yyyy"}}</td>
       <td class="col-1 d-flex align-items-center justify-content-center">{{ins.managementLevel}}</td>
-      <td class="col-1 d-flex align-items-center justify-content-center">{{ins.managementUnit}}</td>
-      <td
-        class="col-1 d-flex align-items-center justify-content-center">{{ins.instrumentStatus?.instrumentStatusName}}</td>
+      <td class="col-1 d-flex align-items-center justify-content-center">{{ins.managementUnit?.managementUnitName}}</td>
+      <td class="col-1 d-flex align-items-center justify-content-center">{{ins.instrumentStatus?.instrumentStatusName}}</td>
       <td class="col-1 d-flex justify-content-center align-items-center">
         <button class="btn btn-danger"
                 (click)="showDeleteModal(ins.id)">
