--- a/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-detail/instrument-detail.component.html
+++ b/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-detail/instrument-detail.component.html
@@ -1,5 +1,5 @@
 <div id="instrument-main-info-container">
-  <p class="mb-4" id="instrument-detail-title-container">
+  <div class="mb-4" id="instrument-detail-title-container">
     <span class="fs-3 me-2">{{measuringInstrumentDetailDto?.instrumentName}}</span>
     <span class="badge rounded-pill align-top text-capitalize user-select-none" style="font-size: 14px;"
           [class.bg-success]="measuringInstrumentDetailDto?.instrumentStatus?.instrumentStatusName === 'Tốt'"
@@ -7,7 +7,11 @@
           [class.bg-warning]="measuringInstrumentDetailDto?.instrumentStatus?.instrumentStatusName === 'Sửa chữa'"
           [class.bg-primary]="measuringInstrumentDetailDto?.instrumentStatus?.instrumentStatusName === 'Kiểm định'">
         {{measuringInstrumentDetailDto?.instrumentStatus?.instrumentStatusName}}</span>
-  </p>
+    <button class="btn btn-outline-primary float-end me-4"
+            [routerLink]="'/instruments/update/' + measuringInstrumentDetailDto?.id">
+      Chỉnh sửa
+    </button>
+  </div>
   <div class="d-flex mb-4" id="instrument-image-info-container">
     <div id="instrument-image-container"
          class="col-4 d-flex justify-content-center"
@@ -141,7 +145,10 @@
 </div>
 <div class="mt-5 pe-3 position-relative pt-5">
   <p class="position-absolute" style="font-size: 24px; top: 0; left: 0">Đặc điểm kỹ thuật</p>
-  <button class="btn btn-outline-primary position-absolute" style="top: 0; right: 24px">Thêm mới</button>
+  <button class="btn btn-outline-primary position-absolute"
+          style="top: 0; right: 24px"
+          data-bs-toggle="modal" data-bs-target="#technical-characteristic-create">Thêm mới
+  </button>
   <div class="border border-1 px-4 pb-2 d-inline-block overflow-auto w-100 position-relative"
        style="max-height: 500px;">
     <table
@@ -153,7 +160,7 @@
       </div>
       <thead *ngIf="technicalCharacteristics.length > 0">
       <tr class="text-center row col-12 flex-nowrap">
-        <th scope="col" class="col-3">Loại thiết bị</th>
+        <th scope="col" class="col-2">Loại thiết bị</th>
         <th scope="col" class="col-2">Tên kỹ thuật</th>
         <th scope="col" class="col-1">Điểm đo đầu</th>
         <th scope="col" class="col-1">Đơn vị</th>
@@ -162,20 +169,32 @@
         <th scope="col" class="col-1">Phương sai</th>
         <th scope="col" class="col-1">Đơn vị</th>
         <th scope="col" class="col-1 text-danger">
+          <i class="fa-regular fa-pen-to-square"></i>
+        </th>
+        <th scope="col" class="col-1 text-danger">
           <i class="fa-solid fa-trash fs-5"></i>
         </th>
       </tr>
       </thead>
       <tbody *ngIf="technicalCharacteristics.length > 0">
       <tr class="row col-12" *ngFor="let item of technicalCharacteristics;">
-        <td class="col-3 d-flex align-items-start justify-content-start text-start">{{item.instrumentType.instrumentTypeName}}</td>
-        <td class="col-3 d-flex align-items-start justify-content-start text-start">{{item.technicalType.technicalTypeName}}</td>
+        <td
+          class="col-2 d-flex align-items-start justify-content-start text-start">{{item.instrumentType.instrumentTypeName}}</td>
+        <td
+          class="col-2 d-flex align-items-start justify-content-start text-start">{{item.technicalType.technicalTypeName}}</td>
         <td class="col-1 d-flex align-items-start justify-content-center">{{item.measuringRangeStart}}</td>
         <td class="col-1 d-flex align-items-start justify-content-center">{{item.measuringUnitStart}}</td>
         <td class="col-1 d-flex align-items-start justify-content-center">{{item.measuringRangeEnd}}</td>
         <td class="col-1 d-flex align-items-start justify-content-center">{{item.measuringUnitEnd}}</td>
         <td class="col-1 d-flex align-items-start justify-content-center">{{item.measuringError}}</td>
         <td class="col-2 d-flex align-items-start justify-content-center">{{item.measuringErrorUnit}}</td>
+        <td class="col-1 d-flex align-items-start justify-content-center ">
+          <button class="btn btn-danger"
+                  data-bs-toggle="modal" data-bs-target="#technical-characteristic-update"
+                  (click)="setTechnicalCharacteristicIdUpdate(item.id)">
+            <i class="fa-regular fa-pen-to-square"></i>
+          </button>
+        </td>
         <td class="col-1 d-flex align-items-start justify-content-center ">
           <button class="btn btn-danger"
                   (click)="showDeleteModal(item.id, 'technicalCharacteristic')">
@@ -357,3 +376,11 @@
     </table>
   </div>
 </div>
+
+<app-technical-characteristic-create
+  [measuringInstrumentId]="measuringInstrumentDetailDto?measuringInstrumentDetailDto.id:0"
+  (emitResult)="checkResult('technical-characteristic', $event)"></app-technical-characteristic-create>
+<app-technical-characteristic-update
+  [measuringInstrumentId]="measuringInstrumentDetailDto?measuringInstrumentDetailDto.id:0"
+  [technicalCharacteristicId]="technicalCharacteristicIdUpdate"
+  (emitResult)="checkResult('technical-characteristic', $event)"></app-technical-characteristic-update>
