--- a/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-detail/instrument-detail.component.html
+++ b/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-detail/instrument-detail.component.html
@@ -207,7 +207,8 @@
 </div>
 <div class="mt-5 pe-3 position-relative pt-5">
   <p class="position-absolute" style="font-size: 24px; top: 0; left: 0">Phụ kiện đi kèm</p>
-  <button class="btn btn-outline-primary position-absolute" style="top: 0; right: 24px">Thêm mới</button>
+  <button class="btn btn-outline-primary position-absolute" style="top: 0; right: 24px"
+          data-bs-toggle="modal" data-bs-target="#attached-document-create">Thêm mới</button>
   <div class="border border-1 px-4 pb-2 d-inline-block overflow-auto w-100"
        style="max-height: 500px;">
     <table
@@ -219,11 +220,13 @@
       </div>
       <thead *ngIf="attachedDocuments.length > 0">
       <tr class="text-center row col-12 flex-nowrap">
-        <th scope="col" class="col-3">Phiên âm</th>
-        <th scope="col" class="col-3">Tên gốc</th>
-        <th scope="col" class="col-1">Ký hiệu</th>
+        <th scope="col" class="col-4">Tên gốc</th>
+        <th scope="col" class="col-2">Ký hiệu</th>
         <th scope="col" class="col-1">Số lượng</th>
         <th scope="col" class="col-3">Ghi chú</th>
+        <th scope="col" class="col-1 text-danger">
+          <i class="fa-regular fa-pen-to-square"></i>
+        </th>
         <th scope="col" class="col-1 text-danger">
           <i class="fa-solid fa-trash fs-5"></i>
         </th>
@@ -231,10 +234,17 @@
       </thead>
       <tbody *ngIf="attachedDocuments.length > 0">
       <tr class="row col-12" *ngFor="let item of attachedDocuments;">
-        <td class="col-3 d-flex align-items-start justify-content-center">{{item.documentName}}</td>
-        <td class="col-1 d-flex align-items-start justify-content-center">{{item.documentSymbol}}</td>
+        <td class="col-4 d-flex align-items-start justify-content-center">{{item.documentName}}</td>
+        <td class="col-2 d-flex align-items-start justify-content-center">{{item.documentSymbol}}</td>
         <td class="col-1 d-flex align-items-start justify-content-center">{{item.quantity}}</td>
         <td class="col-3 d-flex align-items-start justify-content-start text-start">{{item.documentNote}}</td>
+        <td class="col-1 d-flex align-items-start justify-content-center ">
+          <button class="btn btn-danger"
+                  data-bs-toggle="modal" data-bs-target="#attached-document-update"
+                  (click)="setAttachedDocumentIdUpdate(item.id)">
+            <i class="fa-regular fa-pen-to-square"></i>
+          </button>
+        </td>
         <td class="col-1 d-flex justify-content-center align-items-start">
           <button class="btn btn-danger"
                   (click)="showDeleteModal(item.id, 'attachedDocument')">
@@ -380,7 +390,15 @@
 <app-technical-characteristic-create
   [measuringInstrumentId]="measuringInstrumentDetailDto?measuringInstrumentDetailDto.id:0"
   (emitResult)="checkResult('technical-characteristic', $event)"></app-technical-characteristic-create>
+<app-attached-document-create
+  [measuringInstrumentId]="measuringInstrumentDetailDto?measuringInstrumentDetailDto.id:0"
+  (emitResult)="checkResult('attached-document', $event)"></app-attached-document-create>
 <app-technical-characteristic-update
   [measuringInstrumentId]="measuringInstrumentDetailDto?measuringInstrumentDetailDto.id:0"
   [technicalCharacteristicId]="technicalCharacteristicIdUpdate"
   (emitResult)="checkResult('technical-characteristic', $event)"></app-technical-characteristic-update>
+<app-attached-document-update
+  [measuringInstrumentId]="measuringInstrumentDetailDto?measuringInstrumentDetailDto.id:0"
+  [attachedDocumentId]="attachedDocumentIdUpdate"
+  (emitResult)="checkResult('attached-document', $event)"
+></app-attached-document-update>
