feat: add instrument repair func

--- a/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-repair-create/instrument-repair-create.component.html
+++ b/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-repair-create/instrument-repair-create.component.html
@@ -231,7 +231,13 @@
           </div>
         </div>
         <div class="modal-footer">
-          <button type="submit" class="btn btn-primary">Thêm mới</button>
+          <button
+            type="submit"
+            class="btn btn-primary"
+            [disabled]="mainForm.invalid"
+          >
+            Thêm mới
+          </button>
         </div>
       </form>
     </div>
