--- a/measuring-instruments-management/src/app/module/feature/instrument/component/technical-characteristic-create/technical-characteristic-create.component.html
+++ b/measuring-instruments-management/src/app/module/feature/instrument/component/technical-characteristic-create/technical-characteristic-create.component.html
@@ -20,7 +20,6 @@
               <select id="instrument-type"
                       class="form-select"
                       aria-label="Default select instrument-type"
-                      (change)="updateMeasuringUnitList()"
                       formControlName="instrumentType"
                       [ngClass]="{
                       'is-invalid': (mainForm.controls['instrumentType'].touched) && (mainForm.controls['instrumentType'].invalid),
@@ -41,7 +40,7 @@
               <select id="technical-type"
                       class="form-select"
                       aria-label="Default select technical-type"
-                      (change)="updateMeasuringUnitList()"
+                      (change)="changeMeasuringUnit()"
                       formControlName="technicalType"
                       [ngClass]="{
                       'is-invalid': (mainForm.controls['technicalType'].touched) && (mainForm.controls['technicalType'].invalid),
