feat: update, delete instrument repair func

--- a/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-repair-update/instrument-repair-update.component.html
+++ b/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-repair-update/instrument-repair-update.component.html
@@ -1,6 +1,6 @@
 <div
   class="modal fade"
-  id="instrument-repair-create"
+  id="instrument-repair-update"
   data-bs-backdrop="static"
   data-bs-keyboard="false"
   tabindex="-1"
@@ -16,7 +16,7 @@
         <button
           type="button"
           class="btn-close"
-          id="instrument-repair-create-modal-close-btn"
+          id="instrument-repair-update-modal-close-btn"
           data-bs-dismiss="modal"
           aria-label="Close"
           (click)="closeModal()"
@@ -232,7 +232,8 @@
           </div>
         </div>
         <div class="modal-footer">
-          <button type="submit" class="btn btn-primary" [disabled]="mainForm.invalid">Thêm mới</button>
+          <button type="button" (click)="resetForm()" class="btn btn-danger">Hủy bỏ</button>
+          <button type="submit" class="btn btn-primary" [disabled]="mainForm.invalid">Cập nhật</button>
         </div>
       </form>
     </div>
