--- a/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-detail/instrument-detail.component.html
+++ b/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-detail/instrument-detail.component.html
@@ -331,10 +331,13 @@
         <th scope="col" class="col-1">Ngày kiểm định</th>
         <th scope="col" class="col-2">Nơi kiểm định</th>
         <th scope="col" class="col-2">Người kiểm định</th>
-        <th scope="col" class="col-2">Kết quả</th>
+        <th scope="col" class="col-1">Kết quả</th>
         <th scope="col" class="col-1">Số xác nhận</th>
         <th scope="col" class="col-1">Ngày hết hiệu lực</th>
         <th scope="col" class="col-2">Ghi chú</th>
+        <th scope="col" class="col-1 text-danger">
+          <i class="fa-regular fa-pen-to-square"></i>
+        </th>
         <th scope="col" class="col-1 text-danger">
           <i class="fa-solid fa-trash fs-5"></i>
         </th>
@@ -342,13 +345,20 @@
       </thead>
       <tbody *ngIf="instrumentAccreditations.length > 0">
       <tr class="row col-12" *ngFor="let item of instrumentAccreditations;">
-        <td class="col-1 d-flex align-items-start justify-content-center">{{item.accreditationDate}}</td>
+        <td class="col-1 d-flex align-items-start justify-content-center">{{item.accreditationDate | date: 'dd/MM/yyyy'}}</td>
         <td class="col-2 d-flex align-items-start justify-content-center">{{item.accreditationPlace}}</td>
         <td class="col-2 d-flex align-items-start justify-content-center">{{item.accreditor}}</td>
-        <td class="col-2 d-flex align-items-start justify-content-start text-start">{{item.accreditationResult}}</td>
+        <td class="col-1 d-flex align-items-start justify-content-start text-start">{{item.accreditationResult}}</td>
         <td class="col-1 d-flex align-items-start justify-content-center">{{item.accreditationConfirmNumber}}</td>
-        <td class="col-1 d-flex align-items-start justify-content-center">{{item.validAccreditationEndDate}}</td>
+        <td class="col-1 d-flex align-items-start justify-content-center">{{item.validAccreditationEndDate  | date: 'dd/MM/yyyy'}}</td>
         <td class="col-2 d-flex align-items-start justify-content-start text-start">{{item.accreditationNote}}</td>
+        <td class="col-1 d-flex align-items-start justify-content-center ">
+          <button class="btn btn-danger"
+                  data-bs-toggle="modal" data-bs-target="#instrument-accreditation-update"
+                  (click)="setInstrumentAccreditationIdUpdate(item.id)">
+            <i class="fa-regular fa-pen-to-square"></i>
+          </button>
+        </td>
         <td class="col-1 d-flex justify-content-center align-items-start">
           <button class="btn btn-danger"
                   (click)="showDeleteModal(item.id, 'instrumentAccreditation')">
@@ -380,7 +390,10 @@
         <th scope="col" class="col-2">Kết quả</th>
         <th scope="col" class="col-1">Nơi sửa</th>
         <th scope="col" class="col-1">Người sửa</th>
-        <th scope="col" class="col-2">Ghi chú</th>
+        <th scope="col" class="col-1">Ghi chú</th>
+        <th scope="col" class="col-1 text-danger">
+          <i class="fa-regular fa-pen-to-square"></i>
+        </th>
         <th scope="col" class="col-1 text-danger">
           <i class="fa-solid fa-trash fs-5"></i>
         </th>
@@ -388,13 +401,20 @@
       </thead>
       <tbody *ngIf="instrumentRepairs.length > 0">
       <tr class="row col-12" *ngFor="let item of instrumentRepairs;">
-        <td class="col-1 d-flex align-items-start justify-content-center">{{item.repairDate}}</td>
+        <td class="col-1 d-flex align-items-start justify-content-center">{{item.repairDate  | date: 'dd/MM/yyyy'}}</td>
         <td class="col-2 d-flex align-items-start justify-content-start text-start">{{item.repairReason}}</td>
         <td class="col-2 d-flex align-items-start justify-content-start text-start">{{item.instrumentCondition}}</td>
         <td class="col-2 d-flex align-items-start justify-content-start text-start">{{item.repairResult}}</td>
         <td class="col-1 d-flex align-items-start justify-content-center">{{item.repairPlace}}</td>
         <td class="col-1 d-flex align-items-start justify-content-center">{{item.repairer}}</td>
-        <td class="col-2 d-flex align-items-start justify-content-start text-start">{{item.repairNote}}</td>
+        <td class="col-1 d-flex align-items-start justify-content-start text-start">{{item.repairNote}}</td>
+        <td class="col-1 d-flex align-items-start justify-content-center ">
+          <button class="btn btn-danger"
+                  data-bs-toggle="modal" data-bs-target="#instrument-repair-update"
+                  (click)="setInstrumentRepairIdUpdate(item.id)">
+            <i class="fa-regular fa-pen-to-square"></i>
+          </button>
+        </td>
         <td class="col-1 d-flex justify-content-center align-items-start">
           <button class="btn btn-danger"
                   (click)="showDeleteModal(item.id, 'instrumentRepair')">
@@ -424,7 +444,10 @@
         <th scope="col" class="col-4">Tình trạng</th>
         <th scope="col" class="col-1">Thời gian dùng</th>
         <th scope="col" class="col-2">Người dùng</th>
-        <th scope="col" class="col-3">Ghi chú</th>
+        <th scope="col" class="col-2">Ghi chú</th>
+        <th scope="col" class="col-1 text-danger">
+          <i class="fa-regular fa-pen-to-square"></i>
+        </th>
         <th scope="col" class="col-1 text-danger">
           <i class="fa-solid fa-trash fs-5"></i>
         </th>
@@ -432,11 +455,18 @@
       </thead>
       <tbody *ngIf="instrumentUsages.length > 0">
       <tr class="row col-12" *ngFor="let item of instrumentUsages;">
-        <td class="col-1 d-flex align-items-start justify-content-center">{{item.monitorDate}}</td>
+        <td class="col-1 d-flex align-items-start justify-content-center">{{item.monitorDate  | date: 'dd/MM/yyyy'}}</td>
         <td class="col-4 d-flex align-items-start justify-content-start text-start">{{item.instrumentStatus}}</td>
         <td class="col-1 d-flex align-items-start justify-content-center">{{item.workingDuration}}</td>
         <td class="col-2 d-flex align-items-start justify-content-center">{{item.instrumentUser}}</td>
-        <td class="col-3 d-flex align-items-start justify-content-start text-start">{{item.usageNote}}</td>
+        <td class="col-2 d-flex align-items-start justify-content-start text-start">{{item.usageNote}}</td>
+        <td class="col-1 d-flex align-items-start justify-content-center ">
+          <button class="btn btn-danger"
+                  data-bs-toggle="modal" data-bs-target="#instrument-usage-update"
+                  (click)="setInstrumentUsageIdUpdate(item.id)">
+            <i class="fa-regular fa-pen-to-square"></i>
+          </button>
+        </td>
         <td class="col-1 d-flex justify-content-center align-items-start">
           <button class="btn btn-danger"
                   (click)="showDeleteModal(item.id, 'instrumentUsage')">
@@ -471,15 +501,31 @@
   [instrumentForwardId]="instrumentForwardIdUpdate"
   (emitResult)="checkResult('instrument-forward', $event)"
 ></app-instrument-forward-update>
-<app-instrument-usage-create
-  [measuringInstrumentId]="measuringInstrumentDetailDto?measuringInstrumentDetailDto.id:0"
-  (emitResult)="checkResult('instrument-usage', $event)"
-></app-instrument-usage-create>
-<app-instrument-repair-create
-  [measuringInstrumentId]="measuringInstrumentDetailDto?measuringInstrumentDetailDto.id:0"
-  (emitResult)="checkResult('instrument-repair', $event)"
-></app-instrument-repair-create>
 <app-instrument-accreditation-create
   [measuringInstrumentId]="measuringInstrumentDetailDto?measuringInstrumentDetailDto.id:0"
   (emitResult)="checkResult('instrument-accreditation', $event)"
 ></app-instrument-accreditation-create>
+<app-instrument-accreditation-update
+  [measuringInstrumentId]="measuringInstrumentDetailDto?measuringInstrumentDetailDto.id:0"
+  [instrumentAccreditationId]="instrumentAccreditationIdUpdate"
+  (emitResult)="checkResult('instrument-accreditation', $event)"
+></app-instrument-accreditation-update>
+<app-instrument-repair-create
+[measuringInstrumentId]="measuringInstrumentDetailDto?measuringInstrumentDetailDto.id:0"
+(emitResult)="checkResult('instrument-repair', $event)"
+></app-instrument-repair-create>
+<app-instrument-repair-update
+  [measuringInstrumentId]="measuringInstrumentDetailDto?measuringInstrumentDetailDto.id:0"
+  [instrumentRepairId]="instrumentRepairIdUpdate"
+  (emitResult)="checkResult('instrument-repair', $event)"
+>
+</app-instrument-repair-update>
+<app-instrument-usage-create
+  [measuringInstrumentId]="measuringInstrumentDetailDto?measuringInstrumentDetailDto.id:0"
+  (emitResult)="checkResult('instrument-usage', $event)"
+></app-instrument-usage-create>
+<app-instrument-usage-update
+  [measuringInstrumentId]="measuringInstrumentDetailDto?measuringInstrumentDetailDto.id:0"
+  [instrumentUsageId]="instrumentUsageIdUpdate"
+  (emitResult)="checkResult('instrument-usage', $event)">
+</app-instrument-usage-update>
